--- a/main.tex
+++ b/main.tex
@@ -113,7 +113,7 @@
 \begin{titlepage}
 	\centering
     \vspace*{0.5 cm}
-    \includegraphics[scale = 0.11]{isu_seal.png}\\[1.0 cm]	% University Logo
+    \includegraphics[scale = 0.11]{isu_seal.png}\\[1.0 cm]	% University Logo %Need isu_seal.png
     \textsc{\LARGE IOWA STATE UNIVERSITY}\\[2.0 cm]
     \textsc{\large AEROSPACE ENGINEERING DEPARTMENT}\\[0.2 cm]
     \textsc{\large Computational Techniques for Aerospace Design}\\[0.2 cm]
