--- a/main.tex
+++ b/main.tex
@@ -340,9 +340,26 @@ This game will also utilize basic card counting strategies to help the player co
 
 
 \newpage
-%\section{References}
+\section{References}
 \printbibliography[heading=subbibintoc]
-%\bibliographystyle{plain}
-%\bibliography{ref}
+\bibliographystyle{plain}
+\bibliography{ref}
+
+@article{zimran2009game,
+  title={The Game of Blackjack and Analysis of Counting Cards},
+  author={Zimran, Ariell and Klis, Anna and Fuster, Alejandra and Rivelli, Christopher},
+  year={2009}
+}
+
+@article{crafton2020counting,
+  title={Counting Cards: Exploiting Variance and Data Distributions for Robust Compute In-Memory},
+  author={Crafton, Brian and Spetalnick, Samuel and Raychowdhury, Arijit},
+  journal={arXiv preprint arXiv:2006.03117},
+  year={2020}
+}
+
+@misc{dukeu, title={Could mental math boost emotional health?}, url={https://www.eurekalert.org/news-releases/820759}, journal={EurekAlert!}, author={DukeU}}
+ 
+@misc{hargroves_2021, title={7 surprising mental health benefits of playing card games}, url={https://thetreatmentspecialist.com/benefits-of-playing-card-games/}, journal={The Treatment Specialist}, author={Hargroves, Philip}, year={2021}, month={Feb}}
 
 \end{document}
